--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,17 @@ tauri-build = { version = "1.5.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.5.2", features = [ "macos-private-api", "window-unminimize", "window-minimize", "window-show", "window-hide", "window-close", "window-start-dragging", "window-unmaximize", "window-maximize"] }
+tauri = { version = "1.5.2", features = [
+  "macos-private-api",
+  "window-unminimize",
+  "window-minimize",
+  "window-show",
+  "window-hide",
+  "window-close",
+  "window-start-dragging",
+  "window-unmaximize",
+  "window-maximize",
+] }
 window-vibrancy = "0.4.2"
 
 
